# extdb

./: .gitignore  CMakeLists.txt  Changelog.txt  Makefile  Protocol.txt  README.md  build.cmd  conf-main.ini  extDB.project  extdb-conf.ini  sqlite.db
_linux_release/: Readme.txt  extdb-conf.ini
_windows_release/16/: extdb-conf.ini
cmake_modules/: FindMySQL.cmake  FindPOCO.cmake  FindPkgMacros.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
extDB/poco-1.4.7p1-changes/Data/include/Poco/Data/: SessionPool.h  Statement.h
extDB/poco-1.4.7p1-changes/Data/src/: SessionPool.cpp  Statement.cpp
extDB/poco-1.4.7p1-changes/Data/src/MySQL/src/: StatementExecutor.cpp
extDB/poco-custom-changes/: components
extDB/poco-custom-changes/Data/src/: SessionPool.cpp
extDB/src/: ext.cpp  ext.h  main.cpp  rcon.cpp  rcon.h  sanitize.cpp  sanitize.h  uniqueid.cpp
extDB/src/protocols/: abstract_ext.h  abstract_protocol.cpp  abstract_protocol.h  db_custom_v3.cpp  db_custom_v5.cpp  db_custom_v5.h  db_procedure_v2.cpp  db_procedure_v2.h  db_raw_v3.cpp  log.cpp  log.h  misc.cpp  misc.h  misc_vac.cpp  misc_vac.h  vac.cpp  vac.h
extDB/src/spdlog/details/: line_logger.h
extDB/src/spdlog/sinks/: file_sinks.h
extDB2/: Changelog.txt
extDB2/poco-1.6.0-changes/: DLLVersion.rc
extDB2/poco-1.6.0-changes/Data/include/Poco/Data/: SessionPool.h
extDB2/poco-1.6.0-changes/Foundation/src/: Mutex_POSIX.cpp
extDB2/src/: ext.cpp  ext.h  rcon.cpp  rcon.h  sanitize.cpp  uniqueid.cpp
extDB2/src/protocols/: abstract_ext.h  abstract_protocol.h  db_custom_v3.cpp  db_custom_v5.cpp  db_procedure_v2.cpp  db_procedure_v2.h  db_raw_no_extra_quotes_v2.cpp  db_raw_v3.cpp  db_raw_v3.h  log.cpp  misc.cpp  misc.h  misc_vac.cpp  vac.cpp
old_code/: db_basic_v2.cpp  db_custom_v2.cpp
poco-1.4.7p1-changes/: DLLVersion.rc
poco-1.4.7p1-changes/Data/include/Poco/Data/: SessionPool.h
poco-1.6.0-changes/Data/include/Poco/Data/: SessionPool.h  Statement.h
poco-1.6.0-changes/Data/src/: SessionPool.cpp
poco-custom-changes/Data/include/Poco/Data/: SessionPool.h
sqf/: fn_async.sqf  fn_strip.sqf  init.sqf
src/: bercon.cpp  bercon.h  ext.cpp  ext.h  main.cpp  main.h  memory_allocator.cpp  rcon.cpp  rcon.h  sanitize.cpp  sanitize.h  steam.cpp  steam.h  uniqueid.cpp  uniqueid.h
src/plugins/: abstract_ext.h  abstractplugin.cpp  abstractplugin.h  db_raw.cpp  db_raw.h  misc.cpp  misc.h
src/protocols/: abstract_ext.h  abstract_protocol.cpp  abstract_protocol.h  db_basic.cpp  db_basic.h  db_basic_v2.cpp  db_basic_v2.h  db_custom_v2.cpp  db_custom_v2.h  db_custom_v3.cpp  db_custom_v3.h  db_custom_v4.cpp  db_custom_v4.h  db_custom_v5.cpp  db_custom_v5.h  db_procedure.cpp  db_procedure.h  db_procedure_v2.cpp  db_procedure_v2.h  db_raw.cpp  db_raw.h  db_raw_no_extra_quotes.cpp  db_raw_no_extra_quotes.h  db_raw_no_extra_quotes_v2.cpp  db_raw_no_extra_quotes_v2.h  db_raw_v2.cpp  db_raw_v2.h  db_raw_v3.cpp  db_raw_v3.h  db_vac.cpp  db_vac.h  log.cpp  log.h  misc.cpp  misc.h  misc_log.cpp  misc_log.h  misc_v2.cpp  misc_v2.h  misc_vac.cpp  (+5 more)
src/redis/: redisclient.h  redisparser.h  redispool.h  redisvalue.h
src/redis/impl/: redisclient.cpp  redisclientimpl.cpp  redisclientimpl.h  redisparser.cpp  redisvalue.cpp
vcx/: extDB.sln  extDB.vcxproj  extDB.vcxproj.filters  extdb-test.vcxproj  extdb-test.vcxproj.filters
vcx_db_raw/: ReadMe.txt  app.rc  db_raw.vcxproj  db_raw.vcxproj.filters
